--- a/login.html
+++ b/login.html
@@ -90,7 +90,7 @@
                                 document.getElementById('emailid').innerHTML="**@ invalid position";
                                 return false;
                             }
-                            if(email.charAt(email.length-4)!='.')&& (email.charAt(email.length-3)!='.'){
+                            if(email.charAt(email.length-4)!='.') (email.charAt(email.length-3)!='.'){
                                 document.getElementById('emailid').innerHTML="**. invalid position";
                                 return false;
 
